[gd_scene load_steps=3 format=3 uid="uid://by746vwyq87v8"]

[ext_resource type="Script" path="res://scenes/user_interface/unlock_popup/unlock_popup.gd" id="1_823vu"]
[ext_resource type="Texture2D" uid="uid://b8gwi6rmpod02" path="res://assets/textures/white_close_cross.png" id="2_f0xwt"]

[node name="UnlockPopup" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_823vu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 160
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 160

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="PopupLabel" type="RichTextLabel" parent="MarginContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "LABEL TEXT"

[node name="PopupCloseButton" type="TextureButton" parent="MarginContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture_normal = ExtResource("2_f0xwt")

[node name="PopupTimer" type="Timer" parent="."]
unique_name_in_owner = true
